# LightOS

./: .gitignore  BUILD_MACHINE_SETUP.md  CHANGELOG.md  CHANGELOG_v0.2.0.md  DCIM_PRO_FEATURES.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOY_API_NOW.md  DEPLOY_COMPLETE.md  DEPLOY_NETLIFY.md  DEPLOY_NOW.md  DISTRIBUTION.md  Dockerfile  EDGE_QUICKSTART.md  HOW_TO_USE_LOVABLE_PROMPTS.md  INSTALL_WINDOWS.md  LOVABLE_PROMPT.md  LOVABLE_PROMPT_DEV_ENVIRONMENT.txt  LOVABLE_QUICK_PROMPT.txt  LOVABLE_QUICK_PROMPT_DEV_ENV.txt  Makefile  NEURAL_COMPUTE_ENGINE_README.md  PUSH_TO_MARKDOWN_BUILDER_GUIDE.md  QUICKSTART.md  README.md  SETUP-WSL.md  SYSTEM_OVERVIEW.md  UPGRADE_COMPLETE.md  VIRTUALBOX_QUICKSTART.md  deploy.sh  docker-compose.yml  docker-entrypoint.sh  download-lightos.sh  install.sh  lightos-configmap.yaml  lightos-deployment.yaml  lightos-namespace.yaml  netlify.toml  populate-lightos.sh  (+4 more)
.github/workflows/: build-release.yml
build-system/: README.md  build-vm-image.sh  lightos-builder.sh
build-system/edge-profiles/: intel-nuc.conf  jetson-nano.conf  raspberry-pi.conf
build-system/hardware-detection/: detect-hardware.sh
build-system/installer/: install-lightos.sh
dcim-api/: DEMO_READY.md  DEPLOY_API.md  Dockerfile  KAGGLE_SETUP.md  QUICK_DEMO_WITH_KAGGLE.md  README.md  kaggle_downloader.py  kaggle_integration.py  lightrail_ai_demo.py  main-backup.py  main.py  requirements.txt  start_demo.sh
deployment/aws/: DEPLOYMENT_GUIDE.md
deployment/edge/: EDGE_DEPLOYMENT_GUIDE.md
deployment/vm/: README.md  VM_DEPLOYMENT_GUIDE.md  Vagrantfile  setup-kvm.sh  setup-virtualbox.sh
deployment/vps/: Dockerfile  README.md  docker-compose.yml
distribution/debian/: control
distribution/homebrew/: lightos.rb
distribution/packer/: lightos-minimal.pkr.hcl
distribution/systemd/: lightos.service
docs/: NEW_FEATURES_v0.2.1.md
docs-site/: LIGHTRAIL_AI_GUIDE.md  dcim-backup.html  dcim.html  docs.html  index.html  lightrail-orchestration.html
docs-site/api/: cpp-api.html
docs-site/guides/: edge-deployment.html  inference-subsystem.html  installation-all-platforms.html  installation.html  kubernetes.html  python-api.html  quickstart.html
docs-site/tools/: kernel-benchmark.html  vram-calculator.html
docs/architecture/: NEURAL_COMPUTE_ENGINE.md  PLATFORM_AGNOSTIC.md
docs/deployment/: CLOUD_DEPLOYMENT.md
fabric-os/benchmark-service/: Makefile
fabric-os/infrastructure-autopilot/: autopilot.c  autopilot.h
fabric-os/kv-cache/: distributed_kv_cache.h
fabric-os/lightrail-scheduler/: lightrail_scheduler.c  lightrail_scheduler.h
fabric-os/metrics-collector/: performance_metrics.h
inference-subsystem/: README.md
inference-subsystem/cli-wrapper/: LightOS.Interop.cpp  LightOS.Interop.h
inference-subsystem/deployment/: Dockerfile.optimized  grpc_server.py
inference-subsystem/docs/: ARCHITECTURE.md  MODERN_FEATURES.md
inference-subsystem/notebooks/: LightOS_QuickStart.ipynb
inference-subsystem/python-bindings/: MANIFEST.in  lightos_accelerated.py  pyproject.toml  setup.py
inference-subsystem/web-ui/: package.json
libraries/liblightos-collectives/: Makefile
lightos-container-runtime/: .gitignore  Dockerfile  Makefile  README.md
lightos-container-runtime/config/: default.json
lightos-container-runtime/hooks/: poststop  prestart
lightos-container-runtime/install/: install-linux.sh  install-macos.sh  (+1 more)
llm-training-ground/: README.md  unsloth_integration.py
markdown-docs/: .gitignore  INTEGRATION.md  README.md  mkdocs.yml
marketplace/: MARKETPLACE_OVERVIEW.md  QUICK_START.md
tools/: README.md  kernel_benchmark.py  lakehouse.py  model_compiler.py  vram_calculator.py
ultrascale-benchboard/: .env.local.example  QUICKSTART.md  README.md  package.json
web-ui/: .gitignore  App.tsx  README.md  index.html  package.json  types.ts  vite.config.ts
(+112 files in other folders)
