[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cmake>=3.20",
    "ninja",
    "numpy>=1.20.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "lightos-accelerated"
version = "1.0.0"
description = "High-performance AI inference with thermal-aware scheduling and hardware-agnostic execution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "LightOS Team", email = "info@lightos.ai"}
]
maintainers = [
    {name = "LightOS Team", email = "info@lightos.ai"}
]
keywords = [
    "AI", "inference", "GPU", "CUDA", "ROCm", "ONNX", "TorchScript",
    "thermal-aware", "high-performance", "machine-learning", "deep-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0,<2.0.0",
    "onnx>=1.12.0",
    "protobuf>=3.20.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
server = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "ipywidgets>=8.0.0",
]
torch = [
    "torch>=2.0.0",
]
all = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "ipywidgets>=8.0.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/lightiam/lightos"
Documentation = "https://docs.lightos.ai"
Repository = "https://github.com/lightiam/lightos"
Issues = "https://github.com/lightiam/lightos/issues"
Discussions = "https://github.com/lightiam/lightos/discussions"

[project.scripts]
lightos = "lightos_accelerated.cli:main"
lightos-server = "lightos_accelerated.server:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["lightos_accelerated"]

[tool.setuptools.package-data]
lightos_accelerated = [
    "*.so",
    "*.dll",
    "*.dylib",
    "kernels/*.ptx",
    "kernels/*.cubin",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=lightos_accelerated"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["lightos_accelerated"]
omit = [
    "*/tests/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
